Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,7 @@ install_mvn_trivy_docker_kubectl:       # This job runs in the build stage, whic
     - mvn --version
     - java --version
     - sudo apt-get install wget apt-transport-https gnupg lsb-release
-    - wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-    - echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
-    - sudo apt-get update
-    - sudo apt-get install trivy
+    - trivy version
     - docker version
     - sudo snap install kubectl --classic
   tags:
