--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ install_mvn_trivy_docker_kubectl:       # This job runs in the build stage, whic
     - java --version
     - trivy version
     - docker version
-    - sudo snap install kubectl --classic
+    - kubectl version
   tags:
     - self-hosted
 
