features:add tags of stage sonarqube-check code quality with sonarQube

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,8 @@ sonarqube-check:
       - .sonar/cache
   script: 
     - sonar-scanner
+  tags:
+    - self-hosted
   allow_failure: true
   only:
     - main
