features:delete stages sonarqube-check

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=dev-bkjulien_test-driven-development-in-spring-boot_AZC3PNF6j7L8H3huT0kh
 sonar.qualitygate.wait=true
-
+sonar.projectName=test-driven-development-in-spring-boot
+sonar.java.binaries=.
