--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ stages:          # List of stages for jobs, and their order of execution
   - install_tools
   - test
   - security
-  - sonarqube-check
 
 install_mvn_trivy_docker_kubectl:       # This job runs in the build stage, which runs first.
   stage: install_tools
@@ -30,10 +29,9 @@ trivy_fs_scan:
     - self-hosted
 
 sonarqube-check:
-  stage: sonarqube-check
+  stage: security
   image: 
     name: sonarsource/sonar-scanner-cli:latest
-    entrypoint: [""]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
