--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,8 @@ trivy_fs_scan:
 
 sonarqube-check:
   stage: security
-  image: 
-    name: sonarsource/sonar-scanner-cli:latest
+    # image: 
+    # name: sonarsource/sonar-scanner-cli:latest
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
